--- a/신상밀키트page_app/신상밀키트page.css
+++ b/신상밀키트page_app/신상밀키트page.css
@@ -340,7 +340,7 @@
 }
 
 .banner {
-  padding-bottom: 15px;
+  /* padding-bottom: 15px; */
 }
 
 
@@ -372,7 +372,7 @@
 
 .line{
   position: sticky;
-  top: 88px;
+  top: 87.8px;
   display: flex;
   -webkit-box-align: center;
   align-items: center;
@@ -382,7 +382,9 @@
   /* padding: 5px 16px 2px 20px; */
   z-index: 4;
   background-color: rgb(255, 255, 255);
+
   
+  height: 40px;
 }
 
 .line-category{
@@ -390,19 +392,56 @@
   flex-direction:column;
   box-sizing: border-box;
   margin: 0;
-
-
   text-align:center;
 
+
+
+
+  height: 30px;
  
 
 }
 .y1{
+  position: absolute;
+  /* right: 60px;
+  top: 39px;
+  width: 104px; */
+  right: 50px;
+  top: 7px;
+  width: 104px;
+  border-radius: 10px;
+  color: black;
+  background-color: rgb(255, 255, 255);
+  /* box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 10px; */
+  text-align: center;
+ 
 }
 
 .y2 {
   display: none;
+
+
+  position: absolute;
+  right: 50px;
+  top: 35px;
+  width: 104px;
+  height: 75px;
+  border-radius: 6px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 10px;
+  text-align: center;
+
+
+  /* display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0px; */
+
 }
+
 
 .line-local.kind{
   /* display: flex;
@@ -464,7 +503,7 @@
 
 
 .local.kind-ul {
-  position: absolute;
+  /* position: absolute;
   right: 60px;
   top: 39px;
   width: 104px;
@@ -472,7 +511,7 @@
   background-color: rgb(255, 255, 255);
   box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 10px;
   list-style-type: none;
-  list-style-position: inside;
+  list-style-position: inside; */
   
   list-style-type: disc;
   margin-block-start: 1em;
@@ -481,8 +520,12 @@
   margin-inline-end: 0px;
   padding-inline-start: 40px;
 
-  /* display: none !important; */
 
+
+
+  position: relative;
+
+  /* display: none !important; */
 
 }
 
@@ -497,16 +540,24 @@
 
 
   text-align: left;
-  padding-left: 18px;
+  
+  /* padding-top: 5px; */
+  /* padding-left: 18px; */
 /* 
   display: none; */
+
+
+
+  position: absolute;
+  top: 12px;
+  right: 23px;
 }
 
 .local-li a{
   display: block;
   overflow: hidden;
   padding: 0 16px 16px 0;
-  width: 104px;
+  width: 45px;
   font-size: 14px;
   color: rgb(51, 51, 51);
   white-space: nowrap;
@@ -523,9 +574,14 @@
 
 
   text-align: left;
-  padding-left: 18px;
+  /* padding-left: 18px; */
 
   /* display: none; */
+
+
+  position: absolute;
+  top: 43px;
+  right: 23px;
 
 }
 
@@ -533,7 +589,7 @@
   display: block;
   overflow: hidden;
   padding: 0 16px 16px 0;
-  width: 104px;
+  width: 45px;
   font-size: 14px;
   color: rgb(51, 51, 51);
   white-space: nowrap;
@@ -541,7 +597,6 @@
   background-color: transparent;
   text-decoration: none;
 }
-
 
 
 
@@ -567,7 +622,7 @@
   text-decoration: none;
   cursor: pointer;
 
-  padding-top: 15px;
+  /* padding-top: 15px; */
 }
 
 .menu-1-1{
@@ -725,7 +780,7 @@
   text-decoration: none;
   cursor: pointer;
 
-  padding-top: 15px;
+  /* padding-top: 15px; */
 
 }
 
@@ -893,7 +948,7 @@
   text-decoration: none;
   cursor: pointer;
 
-  padding-top: 15px;
+  /* padding-top: 15px; */
 }
 
 
@@ -1057,7 +1112,7 @@
   text-decoration: none;
   cursor: pointer;
 
-  padding-top: 15px;
+  /* padding-top: 15px; */
 }
 
 .menu-4-1{
