--- a/신상밀키트상세page_web/신상_1상세page.css
+++ b/신상밀키트상세page_web/신상_1상세page.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
 @font-face {
   font-family: Noto Sans;
@@ -1094,40 +1093,38 @@ html, button, input, select, textarea {
 .extra{
   opacity: 1;
   transform: none;
-  /* min-width: 432px; */
+  min-width: 387px;
   height: fit-content;
-  /* height: 299px; */
   padding: 0px;
   box-shadow: none;
   border-radius: 0px;
   border: 1px solid rgb(221, 221, 221);
   font-family: "Noto Sans";
-  transition: opacity 311ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, transform 207ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  /* top: 239px;
-  left: 685px; */
-  top: 615px;
-  width: 388px;
-  margin-left: 2px;
-
-
+  transition: opacity 326ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, transform 217ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  /* top: 443px;
+  left: 670px; */
   transform-origin: 216px 0px;
+
   background-color: rgb(255, 255, 255);
   color: rgba(0, 0, 0, 0.87);
-
   position: absolute;
   overflow: hidden auto;
+
   min-height: 16px;
   max-width: calc(100% - 32px);
   max-height: calc(100% - 32px);
   outline: 0px;
 
 
-
-
-
   
   z-index: 50;
   display: none;
+
+
+
+  top: 615px;
+  left: 660px;
+  
 
 }
 
@@ -1135,72 +1132,65 @@ html, button, input, select, textarea {
   padding: 0px;
   list-style: none;
   margin: 0px;
-  padding: 8px 0px;
   position: relative;
   outline: 0px;
-  /* display: block; */
+  /* display: block;
     list-style-type: disc;
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    padding-inline-start: 40px;
+    padding-inline-start: 40px; */
+  
 
-
+    
    
 }
 
 .extra-li1{
   border-bottom: 1px solid rgb(244, 244, 244);
-  min-height: auto;
+  
+
+
+
   -webkit-tap-highlight-color: transparent;
-  background-color: transparent;
-  outline: 0px;
-  border: 0px;
-  margin: 0px;
-  border-radius: 0px;
-  user-select: none;
-  vertical-align: middle;
-  appearance: none;
-  font-family: Roboto, Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.00938em;
-  display: flex;
-  -webkit-box-pack: start;
-  justify-content: center;
-  -webkit-box-align: center;
-  align-items: center;
-  position: relative;
-  text-decoration: none;
-  min-height: 48px;
-  box-sizing: border-box;
-  font-size: 12px;
-  /* padding: 0px; */
-  color: rgb(51, 51, 51);
-  white-space: normal;
-  cursor: pointer;
-  text-align: left;
-
-
-  padding-right: 30px;
-  padding-top: 0;
-  height: 10px;
-  padding-left: 0;
+    /* background-color: transparent; */
+    outline: 0px;
+    border: 0px;
+    margin: 0px;
+    border-radius: 0px;
+    user-select: none;
+    vertical-align: middle;
+    appearance: none;
+    /* font-family: Roboto, Helvetica, Arial, sans-serif; */
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.00938em;
+    display: flex;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: center;
+    align-items: center;
+    position: relative;
+    text-decoration: none;
+    /* min-height: 48px; */
+    box-sizing: border-box;
+    font-size: 12px;
+    padding: 0px;
+    color: rgb(51, 51, 51);
+    white-space: normal;
+    cursor: pointer;
+    text-align: -webkit-match-parent;
 
 }
 
 
 .extra-li1 .extra-div1{
   display: flex;
-    -webkit-box-pack: justify;
-    justify-content: center;
-    width: 100%;
-    /* padding: 11.5px 16px; */
-
-  /* padding-right: 28px; */
-
-margin-right: 10px  ;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  width: 100%;
+  padding: 11.5px 16px;
 }
 
 .extra-li1 .extra-p{
@@ -1239,6 +1229,15 @@ margin-right: 10px  ;
 
 }
 
+.extra-span{
+  overflow: hidden;
+  pointer-events: none;
+  position: absolute;
+  z-index: 0;
+  inset: 0px;
+  border-radius: inherit;
+}
+
 .extra-li1 .extra-div2 div{
   margin-left: 50px;
     text-decoration: none;
@@ -1246,6 +1245,11 @@ margin-right: 10px  ;
     font-weight: bold;
     color: rgb(51, 51, 51);
     display: block;
+}
+
+
+.ba{
+  background-color: #e9e9e9;
 }
 
 
@@ -1368,6 +1372,15 @@ margin-right: 10px  ;
   padding-top: 2px;
   padding-right: 2px;
 }
+
+.empty-heart {
+  content: url(../밀키트_사진들/찜_하트빈것.svg);
+}
+
+.full-heart{
+  content: url(../밀키트_사진들/찜_빨간색하트.svg);
+}
+
 
 .direct-check .div-1 button{
   font-weight: 500;
