신상밀키트page(수정)

--- a/신상밀키트상세page_web/로그인x찜클릭page.css
+++ b/신상밀키트상세page_web/로그인x찜클릭page.css
@@ -35,6 +35,11 @@ html, button, input, select, textarea {
 }
 
 
+.body{
+  overflow-y: hidden;
+}
+
+
 
 .header-popup {
   background-color: rgb(95, 0, 128);
@@ -1223,7 +1228,7 @@ html, button, input, select, textarea {
   -webkit-tap-highlight-color: transparent;
   z-index: 1;
   /* justify-content: center; */
-  margin: 0;
+  margin: 0 auto;
   /* padding: 0 1.6em; */
   color: #545454;
   font-size: 1.125em;
