--- a/신상밀키트상세page_web/신상_1상세page.css
+++ b/신상밀키트상세page_web/신상_1상세page.css
@@ -913,6 +913,176 @@ html, button, input, select, textarea {
 
 }
 
+
+
+
+
+
+
+.product-check-div1{
+  margin-top: 6px;
+
+
+  border-bottom: 1px solid rgb(244, 244, 244);
+  display: flex;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  padding: 11px 10px 11px 15px;
+  font-size: 12px;
+  border-left: 1px solid rgb(244, 244, 244);
+  border-top: 1px solid rgb(244, 244, 244);
+  border-right: 1px solid rgb(244, 244, 244);
+
+
+
+
+  display: none;
+}
+
+.product-check-div2{
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.product-check-div2 span{
+  line-height: 16px;
+  width: 320px;
+  color: rgb(51, 51, 51);
+  overflow-wrap: break-word;
+}
+
+.product-check-div3{
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  align-items: center;
+  padding-top: 12px;
+}
+
+.product-check-div4{
+  display: inline-flex;
+  flex-direction: row;
+  -webkit-box-align: center;
+  align-items: center;
+  border: 1px solid rgb(221, 223, 225);
+  width: 88px;
+  border-radius: 3px;
+}
+
+.product-check-div4 .b1{
+  cursor: default;
+  display: inline-flex;
+    width: 28px;
+    height: 28px;
+    border: none;
+    font-size: 1px;
+    color: transparent;
+    background-size: cover;
+    background-color: transparent;
+    background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMzAiIGhlaWdodD0iMzAiIHZpZXdCb3g9IjAgMCAzMCAzMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KICAgIDxwYXRoIGQ9Ik0yMCAxNHYySDEwdi0yeiIgZmlsbD0iI0RERCIgZmlsbC1ydWxlPSJub256ZXJvIi8+Cjwvc3ZnPgo=);
+    vertical-align: top;
+    border-radius: 0;
+    text-transform: none;
+    -webkit-appearance: button;
+    overflow: visible;
+    font: inherit;
+    margin: 0;
+    -webkit-tap-highlight-color: transparent;
+}
+
+/* .but {
+  vertical-align: top;
+  border-width: initial;
+  border-style: none;
+  border-color: initial;
+  border-image: initial;
+  cursor: pointer;
+  background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMzAiIGhlaWdodD0iMzAiIHZpZXdCb3g9IjAgMCAzMCAzMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KICAgIDxwYXRoIGQ9Ik0yMCAxNHYySDEwdi0yeiIgZmlsbD0iIzMzMyIgZmlsbC1ydWxlPSJub256ZXJvIi8+Cjwvc3ZnPgo=);
+} */
+
+.product-check-div4 .div1{
+  font-weight: 400;
+  display: inline-flex;
+  overflow: hidden;
+  white-space: nowrap;
+  -webkit-box-pack: center;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(51, 51, 51);
+  text-align: center;
+  width: 31px;
+  height: 28px;
+  line-height: 28px;
+
+}
+
+.product-check-div4 .b2{
+  display: inline-flex;
+  width: 28px;
+  height: 28px;
+  border: none;
+  font-size: 1px;
+  color: transparent;
+  background-size: cover;
+  background-color: transparent;
+  background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMzAiIGhlaWdodD0iMzAiIHZpZXdCb3g9IjAgMCAzMCAzMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KICAgIDxwYXRoIGQ9Ik0xNiAxMHY0aDR2MmgtNHY0aC0ydi00aC00di0yaDR2LTRoMnoiIGZpbGw9IiMzMzMiIGZpbGwtcnVsZT0ibm9uemVybyIvPgo8L3N2Zz4K);
+  vertical-align: top;
+
+  border-radius: 0;
+  text-transform: none;
+  -webkit-appearance: button;
+  overflow: visible;
+  font: inherit;
+  margin: 0;
+  -webkit-tap-highlight-color: transparent;
+  cursor: pointer;
+}
+
+.product-check-div5 .sp1{
+  margin-right: 4px;
+  font-weight: normal;
+  font-size: 12px;
+  color: rgb(181, 181, 181);
+  text-decoration: line-through;
+}
+
+.product-check-div5 .sp2{
+  font-weight: bold;
+  font-size: 12px;
+  color: rgb(51, 51, 51);
+  padding-right: 5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .dd-div1{
   display: block;
 
@@ -1093,15 +1263,15 @@ html, button, input, select, textarea {
 .extra{
   opacity: 1;
   transform: none;
-  min-width: 387px;
+  min-width: 386.5px;
   height: fit-content;
   padding: 0px;
   box-shadow: none;
   border-radius: 0px;
   border: 1px solid rgb(221, 221, 221);
   font-family: "Noto Sans";
-  transition: opacity 326ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, transform 217ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  /* top: 443px;
+  transition: opacity 229ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, transform 153ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  /* top: 582px;
   left: 670px; */
   transform-origin: 216px 0px;
 
@@ -1180,17 +1350,29 @@ html, button, input, select, textarea {
     color: rgb(51, 51, 51);
     white-space: normal;
     cursor: pointer;
-    text-align: -webkit-match-parent;
+    /* text-align: -webkit-match-parent; */
 
+}
+
+.background{
+  background-color: #e9e9e9;
 }
 
 
 .extra-li1 .extra-div1{
   display: flex;
   -webkit-box-pack: justify;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
-  padding: 11.5px 16px;
+  /* padding: 10px 8px; */
+  height: 40px;
+  margin: 0 auto;
+
+
+  padding-left: 20px;
+  padding-right: 20px;
+
+  
 }
 
 .extra-li1 .extra-p{
@@ -1302,6 +1484,9 @@ html, button, input, select, textarea {
   -webkit-box-pack: end;
   justify-content: flex-end;
   padding-top: 10px;
+
+
+  padding-right: 10px;
 }
 
 .total-price-1-2 .sp1{
