--- a/신상밀키트상세page_web/로그인x찜클릭page.css
+++ b/신상밀키트상세page_web/로그인x찜클릭page.css
@@ -35,6 +35,11 @@ html, button, input, select, textarea {
 }
 
 
+.body{
+  overflow-y: hidden;
+}
+
+
 
 .header-popup {
   background-color: rgb(95, 0, 128);
@@ -909,20 +914,9 @@ html, button, input, select, textarea {
     flex-direction: column;
     margin-inline-start: 40px;
 
-
-
 }
 
-
-
-
-
-
-
 .product-check-div1{
-  margin-top: 6px;
-
-
   border-bottom: 1px solid rgb(244, 244, 244);
   display: flex;
   flex-direction: column;
@@ -933,11 +927,6 @@ html, button, input, select, textarea {
   border-left: 1px solid rgb(244, 244, 244);
   border-top: 1px solid rgb(244, 244, 244);
   border-right: 1px solid rgb(244, 244, 244);
-
-
-
-
-  display: none;
 }
 
 .product-check-div2{
@@ -1059,377 +1048,6 @@ html, button, input, select, textarea {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.dd-div1{
-  display: block;
-
-}
-
-.dd-div2{
-
-}
-
-.dd-div3{
-  display: inline-flex;
-  flex-direction: column;
-  position: relative;
-  min-width: 0px;
-  padding: 0px;
-  margin: 0px;
-  border: 0px;
-  vertical-align: top;
-  width: 100%;
-}
-
-.dd-div4{
-  height: 40px;
-  font-family: Noto Sans;
-  font-family: Roboto, Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  line-height: 1.4375em;
-  letter-spacing: 0.00938em;
-  color: rgba(0, 0, 0, 0.87);
-  box-sizing: border-box;
-  cursor: text;
-  display: inline-flex;
-  -webkit-box-align: center;
-  align-items: center;
-  position: relative;
-  font-size: 12px;
-  height: 44px;
-  border-color: rgb(221, 221, 221);
-  border-radius: 0px;
-}
-
-.dd-div4 div{
-  padding-right: 32px;
-  height: auto;
-  min-height: 1.4375em;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  appearance: none;
-    user-select: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font: bold;
-    color: inherit;
-    font-weight: 550;
-    letter-spacing: inherit;
-    color: currentcolor;
-    border: 0px;
-    box-sizing: content-box;
-    background: none;
-    height: 1.4375em;
-    margin: 0px;
-    -webkit-tap-highlight-color: transparent;
-    display: block;
-    min-width: 0px;
-    width: 100%;
-    animation-name: mui-auto-fill-cancel;
-    animation-duration: 10ms;
-    padding: 16.5px 14px;
-}
-
-.dd-div4 input{
-  bottom: 0px;
-    left: 0px;
-    position: absolute;
-    opacity: 0;
-    pointer-events: none;
-    width: 100%;
-    box-sizing: border-box;
-    font-size: 14px;
-    color: #333;
-    font: inherit;
-    margin: 0;
-    -webkit-tap-highlight-color: transparent;
-    writing-mode: horizontal-tb !important;
-    text-rendering: auto;
-    color: fieldtext;
-    letter-spacing: normal;
-    word-spacing: normal;
-    line-height: normal;
-    text-transform: none;
-    text-indent: 0px;
-    text-shadow: none;
-    display: inline-block;
-    text-align: start;
-    appearance: auto;
-    -webkit-rtl-ordering: logical;
-    cursor: text;
-    background-color: field;
-    margin: 0em;
-    padding: 1px 2px;
-    border-width: 2px;
-    border-style: inset;
-    border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
-    border-image: initial;
-}
-
-.dd-div4 svg{
-  right: 10px;
-  color: rgb(51, 51, 51);
-  overflow: hidden;
-  user-select: none;
-  width: 1em;
-  height: 1em;
-  display: inline-block;
-  fill: currentcolor;
-  flex-shrink: 0;
-  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  font-size: 1.5rem;
-  position: absolute;
-
-  top: calc(50% - 0.5em);
-  pointer-events: none;
-  overflow-clip-margin: content-box;
-}
-
-.go{
-  transform: rotate(180deg);
-}
-/* .go-1{
-  transform: rotate(180deg);
-} */
-
-.dd-div4 svg path{
-  d: path("M 7 10 l 5 5 l 5 -5 Z");
-  transform-origin: 0px 0px;
-}
-
-.dd-div4 fieldset{
-  border-color: #ddd !important;
-  text-align: left;
-  position: absolute;
-  inset: -5px 0px 0px;
-  margin: 0px;
-  padding: 0px 8px;
-  pointer-events: none;
-  border-radius: inherit;
-  border-style: solid;
-  border-width: 1px;
-  overflow: hidden;
-  min-width: 0%;
-  display: block;
-    margin-inline-start: 2px;
-    margin-inline-end: 2px;
-    padding-block-start: 0.35em;
-    padding-inline-start: 0.75em;
-    padding-inline-end: 0.75em;
-    padding-block-end: 0.625em;
-    min-inline-size: min-content;
-    border-image: initial;
-}
-
-.dd-div4 fieldset legend{
-  float: unset;
-  padding: 0px;
-  line-height: 11px;
-  transition: width 150ms cubic-bezier(0, 0, 0.2, 1) 0ms;
-  border: 0;
-  vertical-align: top;
-  display: block;
-  padding-inline-start: 2px;
-  padding-inline-end: 2px;
-}
-
-
-
-
-.extra{
-  opacity: 1;
-  transform: none;
-  min-width: 386.5px;
-  height: fit-content;
-  padding: 0px;
-  box-shadow: none;
-  border-radius: 0px;
-  border: 1px solid rgb(221, 221, 221);
-  font-family: "Noto Sans";
-  transition: opacity 229ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, transform 153ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  /* top: 582px;
-  left: 670px; */
-  transform-origin: 216px 0px;
-
-  background-color: rgb(255, 255, 255);
-  color: rgba(0, 0, 0, 0.87);
-  position: absolute;
-  overflow: hidden auto;
-
-  min-height: 16px;
-  max-width: calc(100% - 32px);
-  max-height: calc(100% - 32px);
-  outline: 0px;
-
-
-  
-  z-index: 50;
-  display: none;
-
-
-
-  top: 615px;
-  left: 660px;
-  
-
-}
-
-.extra-ul {
-  padding: 0px;
-  list-style: none;
-  margin: 0px;
-  position: relative;
-  outline: 0px;
-  /* display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px; */
-  
-
-    
-   
-}
-
-.extra-li1{
-  border-bottom: 1px solid rgb(244, 244, 244);
-  
-
-
-
-  -webkit-tap-highlight-color: transparent;
-    /* background-color: transparent; */
-    outline: 0px;
-    border: 0px;
-    margin: 0px;
-    border-radius: 0px;
-    user-select: none;
-    vertical-align: middle;
-    appearance: none;
-    /* font-family: Roboto, Helvetica, Arial, sans-serif; */
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.00938em;
-    display: flex;
-    -webkit-box-pack: start;
-    justify-content: flex-start;
-    -webkit-box-align: center;
-    align-items: center;
-    position: relative;
-    text-decoration: none;
-    /* min-height: 48px; */
-    box-sizing: border-box;
-    font-size: 12px;
-    padding: 0px;
-    color: rgb(51, 51, 51);
-    white-space: normal;
-    cursor: pointer;
-    /* text-align: -webkit-match-parent; */
-
-}
-
-.background{
-  background-color: #e9e9e9;
-}
-
-
-.extra-li1 .extra-div1{
-  display: flex;
-  -webkit-box-pack: justify;
-  justify-content: center;
-  width: 100%;
-  /* padding: 10px 8px; */
-  height: 40px;
-  margin: 0 auto;
-
-
-  padding-left: 20px;
-  padding-right: 20px;
-
-  
-}
-
-.extra-li1 .extra-p{
-  display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-
-}
-
-.extra-li1 .extra-p span{
-  width: 240px;
-  line-height: 16px;
-  font-size: 12px;
-  letter-spacing: -0.5px;
-  overflow-wrap: break-word;
-
-}
-
-.extra-li1 .extra-div2{
-  display: flex;
-  align-self: center;
-  flex-shrink: 0;
-  gap: 4px;
-
-
-}
-
-.extra-span{
-  overflow: hidden;
-  pointer-events: none;
-  position: absolute;
-  z-index: 0;
-  inset: 0px;
-  border-radius: inherit;
-}
-
-.extra-li1 .extra-div2 div{
-  margin-left: 50px;
-    text-decoration: none;
-    font-size: 12px;
-    font-weight: bold;
-    color: rgb(51, 51, 51);
-    display: block;
-}
-
-
 .ba{
   background-color: #e9e9e9;
 }
@@ -1484,9 +1102,6 @@ html, button, input, select, textarea {
   -webkit-box-pack: end;
   justify-content: flex-end;
   padding-top: 10px;
-
-
-  padding-right: 10px;
 }
 
 .total-price-1-2 .sp1{
@@ -1547,6 +1162,145 @@ html, button, input, select, textarea {
     overflow: clip;
 }
 
+
+.heart-container{
+  overflow-y: auto;
+  align-items: center;
+  background: rgba(0,0,0,.4);
+  padding: 0 24px;
+  -webkit-tap-highlight-color: transparent;
+
+  display: flex;
+    position: fixed;
+    /* z-index: 1060; */
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    flex-direction: row;
+    /* align-items: center; */
+    justify-content: center;
+    /* padding: .625em; */
+    overflow-x: hidden;
+    transition: background-color .1s;
+    /* -webkit-overflow-scrolling: touch; */
+
+    z-index: 9999!important;
+    margin: 0 auto;
+    
+}
+
+.heart-div0{
+  animation: none;
+  margin: auto;
+  display: flex;
+  max-width: 360px;
+
+
+  height: 178px;
+
+
+    border-radius: 12px;
+    padding: 0;
+    -webkit-tap-highlight-color: transparent;
+    /* display: none; */
+    position: relative;
+    box-sizing: border-box;
+    flex-direction: column;
+    justify-content: center;
+    width: 32em;
+    /* max-width: 100%; */
+    /* padding: 1.25em; */
+    border: none;
+    /* border-radius: 5px; */
+    background: #fff;
+    font-family: inherit;
+    font-size: 1rem;
+
+
+    margin-top: 470px;
+  
+   
+}
+
+.heart-div1{
+  padding: 0;
+  -webkit-tap-highlight-color: transparent;
+  z-index: 1;
+  /* justify-content: center; */
+  margin: 0 auto;
+  /* padding: 0 1.6em; */
+  color: #545454;
+  font-size: 1.125em;
+  font-weight: 400;
+  line-height: normal;
+  text-align: center;
+  word-wrap: break-word;
+
+
+
+  /* display: none; */
+
+}
+
+
+.heart-div2{
+  display: block;
+  padding: 0;
+  -webkit-tap-highlight-color: transparent;
+
+}
+
+.heart-div3{
+  padding: 24px 24px 0px;
+    font-size: 16px;
+    font-weight: 500;
+    text-align: left;
+    color: rgb(51, 51, 51);
+    line-height: 21px;
+    margin-top: 0px;
+    white-space: pre-line;
+    letter-spacing: 0px;
+}
+
+.heart-div4{
+  height: 56px;
+    /* border-top: none; */
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+    /* display: flex; */
+    /* -webkit-box-pack: end;
+    justify-content: flex-end;
+    padding: 0px 8px;
+    margin-top: 16px; */
+
+
+}
+
+.heart-b1{
+  /* width: auto; */
+  height: 100%;
+  border: none;
+  /* padding: 0px 18px; */
+  font-size: 16px;
+  /* font-weight: 600; */
+  color: rgb(95, 0, 128);
+  background: transparent;
+  -webkit-appearance: button;
+  cursor: pointer;
+  text-transform: none;
+  overflow: visible;
+  font: inherit;
+  margin: 0;
+  -webkit-tap-highlight-color: transparent;
+}
+
+
+.heart-action{
+
+}
+
+
 .direct-check .div-1{
   -webkit-box-flex: 1;
   flex-grow: 1;
@@ -1605,6 +1359,9 @@ html, button, input, select, textarea {
     background-color: #fff;
     margin-top: 50px;
     display: block;
+
+
+    margin: 0 auto;
 
 }
 
