프로젝트1 퍼블리싱 최종완성본

--- a/login/login.css
+++ b/login/login.css
@@ -189,3 +189,12 @@ p{
   background-color: rgb(255, 255, 255);
   border: 1px solid rgb(95, 0, 128);
 }
+.home-button{
+  text-decoration: none;
+
+
+  color: #333;
+
+
+  font-family: "Noto Sans", "malgun gothic", AppleGothic, dotum, sans-serif;
+}
