--- a/mypage/mypage.css
+++ b/mypage/mypage.css
@@ -95,3 +95,21 @@ svg{
   color: rgb(95, 0, 128);
   font-weight: 500;
 }
+.notice_area{
+  padding: 10px 0px
+}
+.notice_red{
+  text-align: center;
+  font-size: 13px;
+  color: rgb(240, 63, 64);
+  margin-top: -4px;
+}
+.home-button{
+  text-decoration: none;
+
+
+  color: #333;
+
+
+  font-family: "Noto Sans", "malgun gothic", AppleGothic, dotum, sans-serif;
+}
